k8s/essentia/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: essentia-api
  namespace: essentia
spec:
  selector:
    app: essentia-api
  ports:
    - port: 4000
      targetPort: 4000
