k8s/essentia/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essentia-api
  namespace: essentia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.essentia.json-server.win
      secretName: essentia-api-tls
  rules:
    - host: api.essentia.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: essentia-api
                port:
                  number: 4000
